feat(frontend): Add navigation to header. 	-I have added the "Home" navigator to the nav links, because when user in feeds or in other pages, if he needs to go to the home page, there 	no navigation in the respective pages, from navigation bar, he can go the landing page with this. 	- Also moved the login/logout feature to the top header section to maintain consistency with other defra services.
Issued Id: NCEA-213.

--- a/src/assets/sass/settings/_colors.scss
+++ b/src/assets/sass/settings/_colors.scss
@@ -1,3 +1,7 @@
-$gov-defra-color-websafe: govuk-organisation-colour(
-  'department-for-environment-food-rural-affairs'
-);
+$gov-defra-color-websafe: govuk-organisation-colour('department-for-environment-food-rural-affairs');
+
+$defra-brand: #008938;
+
+$defra-brand-hover: #005623;
+
+$govuk-black: #0b0c0c;
