--- a/src/views/screens/home/help.njk
+++ b/src/views/screens/home/help.njk
@@ -27,12 +27,12 @@
        <p class="govuk-heading-m">Help accessing natural capital data</p>
       <p class="govuk-body-m">Data for the United Kingdom and UK Overseas Territories is directly available from these sources:</p>
         <ul class=" govuk-!-margin-bottom-5">
-        <li class="govuk-body-m govuk-!-margin-bottom-1"><a href="https://medin.org.uk/" target="_blank">Marine Environmental Data & Information Network (MEDIN)</a></li>
-        <li class="govuk-body-m govuk-!-margin-bottom-1"><a href="https://jncc.gov.uk/" target="_blank">Joint Nature Conservation Committee (JNCC)</a></li>
+        <li class="govuk-body-m govuk-!-margin-bottom-1"><a class='govuk-link' href="https://medin.org.uk/" target="_blank">Marine Environmental Data & Information Network (MEDIN)</a></li>
+        <li class="govuk-body-m govuk-!-margin-bottom-1"><a class='govuk-link' href="https://jncc.gov.uk/" target="_blank">Joint Nature Conservation Committee (JNCC)</a></li>
       </ul>
       <h1 class="govuk-heading-m">Learn about the NCEA</h1>
       <p class="govuk-body-m">
-        To find out more about the NCEA programme, visit the <a href="https://www.gov.uk/government/publications/natural-capital-and-ecosystem-assessment-programme/natural-capital-and-ecosystem-assessment-programme" rel="noreferrer noopener" target="_blank" class="govuk-link help-link"> Natural Capital and Ecosystem Assessment (NCEA)</a>  page on gov.uk.
+        To find out more about the NCEA programme, visit the <a class='govuk-link' href="https://www.gov.uk/government/publications/natural-capital-and-ecosystem-assessment-programme/natural-capital-and-ecosystem-assessment-programme" rel="noreferrer noopener" target="_blank" class="govuk-link help-link"> Natural Capital and Ecosystem Assessment (NCEA)</a>  page on gov.uk.
       </p>
     </div>
   </div>
