--- a/src/views/screens/home/terms_conditions.njk
+++ b/src/views/screens/home/terms_conditions.njk
@@ -50,13 +50,13 @@
       </section>
       <h2 class="govuk-heading-s ncea-static-page__heading-s govuk-!-margin-top-4">Using GOV.UK content</h2>
       <section class="ncea-static-page__content">
-        <p class="ncea-static-page__content-item">Most content on GOV.UK is subject to <a href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/" class="govuk-link help-link" target="_blank">Crown copyright protection</a> and is published under the <a href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/1/open-government-licence.htm" class="govuk-link help-link" target="_blank">Open Government Licence</a>(OGL).</p>
+        <p class="ncea-static-page__content-item">Most content on GOV.UK is subject to <a href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/" class="govuk-link" target="_blank">Crown copyright protection</a> and is published under the <a href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/1/open-government-licence.htm" class="govuk-link " target="_blank">Open Government Licence</a>(OGL).</p>
         <p class="ncea-static-page__content-item">
-          Some content is exempt from the OGL - check the <a href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/1/open-government-licence.htm" class="govuk-link help-link" target="_blank">list of exemptions.</a>
+          Some content is exempt from the OGL - check the <a href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/1/open-government-licence.htm" class="govuk-link" target="_blank">list of exemptions.</a>
         </p>
         <p class="ncea-static-page__content-item">Departmental logos and crests are also exempt from the OGL, except when they form an integral part of a document or dataset.</p>
         <p class="ncea-static-page__content-item">If any content is not subject to Crown copyright protection or published under the OGL, we'll usually credit the author or copyright holder.</p>
-        <p class="ncea-static-page__content-item">You can reproduce content published on GOV.UK under the OGL as long as you follow the licence's conditions. <a href="https://www.gov.uk/contact/govuk" class="govuk-link help-link" target="_blank">Contact us</a> if you want to reproduce a piece of content but are not sure if it's covered by Crown copyright or the OGL.</p>
+        <p class="ncea-static-page__content-item">You can reproduce content published on GOV.UK under the OGL as long as you follow the licence's conditions. <a href="https://www.gov.uk/contact/govuk" class="govuk-link" target="_blank">Contact us</a> if you want to reproduce a piece of content but are not sure if it's covered by Crown copyright or the OGL.</p>
         <p class="ncea-static-page__content-item">We make most of the content on GOV.UK available through feeds for other websites and applications to use. The websites and applications that use our feeds are not our products, and they might use versions of our content that have been edited and stored for later use ('cached').</p>
         <p class="ncea-static-page__content-item">We do not give any guarantees, conditions or warranties about the accuracy or completeness of any content used by these products. We're not liable for any loss or damage that may come from your use of these products.</p>
         <p class="ncea-static-page__content-item">The most up to date version of our content will always be on GOV.UK.</p>
@@ -109,13 +109,13 @@
           <li class="ncea-static-page__content-item">if it breaches copyright laws, contains sensitive personal data or material that may be considered obscene or defamatory</li>
         </ul>
         <p class="ncea-static-page__content-item">
-          <a href="https://www.gov.uk/contact/govuk" class="govuk-link help-link" target="_blank">Contact us</a> to ask for content to be removed. You'll need to send us the web address (URL) of the content and explain why you think it should be removed. We'll reply to let you know whether we'll remove it.</p>
-        <p class="ncea-static-page__content-item">We remove content at our discretion in discussion with the department or agency responsible for it. You can still request information under the <a href="https://www.gov.uk/make-a-freedom-of-information-request" class="govuk-link help-link" target="_blank">Freedom of Information Act</a> and the <a href="https://www.gov.uk/data-protection" class="govuk-link help-link" target="_blank">Data Protection Act.</a>
+          <a href="https://www.gov.uk/contact/govuk" class="govuk-link " target="_blank">Contact us</a> to ask for content to be removed. You'll need to send us the web address (URL) of the content and explain why you think it should be removed. We'll reply to let you know whether we'll remove it.</p>
+        <p class="ncea-static-page__content-item">We remove content at our discretion in discussion with the department or agency responsible for it. You can still request information under the <a href="https://www.gov.uk/make-a-freedom-of-information-request" class="govuk-link " target="_blank">Freedom of Information Act</a> and the <a href="https://www.gov.uk/data-protection" class="govuk-link " target="_blank">Data Protection Act.</a>
         </p>
       </section>
       <h2 class="govuk-heading-s ncea-static-page__heading-s govuk-!-margin-top-4">Information about you and your visits to our pages</h2>
       <section class="ncea-static-page__content">
-        <p class="ncea-static-page__content-item">We collect information about you in accordance with our <a href="https://www.gov.uk/help/privacy-notice" class="govuk-link help-link" target="_blank">privacy policy</a> and our <a href="https://www.gov.uk/help/cookies" class="govuk-link help-link" target="_blank">cookie policy.</a> By using GOV.UK, you agree to us collecting this information and confirm that any data you provide is accurate.</p>
+        <p class="ncea-static-page__content-item">We collect information about you in accordance with our <a href="https://www.gov.uk/help/privacy-notice" class="govuk-link " target="_blank">privacy policy</a> and our <a href="https://www.gov.uk/help/cookies" class="govuk-link " target="_blank">cookie policy.</a> By using GOV.UK, you agree to us collecting this information and confirm that any data you provide is accurate.</p>
       </section>
       <h2 class="govuk-heading-s ncea-static-page__heading-s govuk-!-margin-top-4">Virus protection</h2>
       <section class="ncea-static-page__content">
