--- a/src/assets/sass/templates/_header.scss
+++ b/src/assets/sass/templates/_header.scss
@@ -1,37 +1,116 @@
-@media only screen and (min-width: 769px){
-    .header-container {
-        display: block;
-    }
+@media only screen and (min-width: 769px) {
+  .header-container {
+    display: block;
+  }
 }
 
 @media (min-width: 40.0625em) {
-    .govuk-header__link--service-name, .govuk-header__service-name {
-        font-size: 24px;
-        font-size: 1.5rem;
-        line-height: 1.25;
-    }
+  .govuk-header__link--service-name,
+  .govuk-header__service-name {
+    font-size: 24px;
+    font-size: 1.5rem;
+    line-height: 1.25;
+  }
 }
 
-.govuk-header__link--service-name, .govuk-header__service-name {
-    display: inline-block;
-    margin-bottom: 10px;
-    font-family: GDS Transport,arial,sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    font-weight: 700;
-    font-size: 18px;
-    font-size: 1.125rem;
-    line-height: 1.1111111111;
-    margin-top: 1%;
+.govuk-header__link--service-name,
+.govuk-header__service-name {
+  display: inline-block;
+  margin-bottom: 10px;
+  font-family:
+    GDS Transport,
+    arial,
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-weight: 700;
+  font-size: 18px;
+  font-size: 1.125rem;
+  line-height: 1.1111111111;
+  margin-top: 1%;
 }
 
 .govuk-tag.govuk-phase-banner__content__tag {
-    background-color: $govuk-link-colour;
-    color: govuk-colour("white");
-    text-transform: uppercase;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 16px;
-    letter-spacing: 1px;
+  background-color: $govuk-link-colour;
+  color: govuk-colour('white');
+  text-transform: uppercase;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 16px;
+  letter-spacing: 1px;
+}
+
+.govuk-header {
+  &__content {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  &__menu-button {
+    display: none !important;
+  }
+  &__navigation-list {
+    &[hidden] {
+      display: block;
+    }
+  }
+}
+.govuk-header--full-width-border {
+  border-bottom: 6px solid $defra-brand;
+}
+
+.govuk-service-navigation {
+  background-color: inherit;
+  border-bottom: 1px solid $govuk-black;
+
+  &__wrapper {
+    width: 100%;
+  }
+
+  &__item {
+    font-size: 1rem;
+    font-weight: 600;
+    padding: 1em 0px 0.5em 0px;
+  }
+
+  &__item--active {
+    border-color: $defra-brand;
+    border-bottom-width: 0px;
+    padding-left: 1rem;
+
+    .govuk-service-navigation__link:not(:hover):not(:focus) {
+      color: $defra-brand;
+    }
+    .govuk-service-navigation__link:hover {
+      color: $defra-brand-hover;
+    }
+  }
+
+  &__link {
+    &:hover {
+      text-decoration-thickness: max(1px, 1px, 0.01em);
+    }
+    &:hover {
+      color: $govuk-black;
+    }
+    &:not(:hover):not(:focus) {
+      color: $govuk-black;
+    }
+  }
+  &__toggle {
+    :focus {
+      box-shadow: 0 4px $defra-brand-hover;
+    }
+  }
+}
+
+@media (min-width: 640px) {
+  .govuk-service-navigation {
+    &__item--active {
+      border-bottom-width: 3px;
+      padding-left: 0px;
+    }
+  }
 }
