--- a/src/views/screens/feeds/template.njk
+++ b/src/views/screens/feeds/template.njk
@@ -23,7 +23,7 @@
               <small><b>Published on : </b>{{ article.pubDate }}</small>
             </div>
             <p class="govuk-body">{{ article.summary }}</p>
-            <a href="{{ article.link }}" target="_blank">{{ article.title }}</a>
+            <a class="govuk-link" href="{{ article.link }}" target="_blank">{{ article.title }}</a>
             <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
           </li>
         {% endfor %}
