--- a/src/views/screens/home/privacy_policy.njk
+++ b/src/views/screens/home/privacy_policy.njk
@@ -26,7 +26,7 @@
       <p class="privacy_policy_last_updated govuk-!-margin-top-2">Last updated September 2024</p>
       <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">Privacy policy</h1>
         <h1 class="govuk-heading-m ">Find natural capital data</h1>
-         <p class="govuk-body-m">This privacy notice explains the privacy policies for the Find natural capital data service. If you have any queries about the content of this privacy notice, please email  <a class="govuk-link help-link" href="mailto: data.protection@defra.gov.uk">data.protection@defra.gov.uk.</a></p>
+         <p class="govuk-body-m">This privacy notice explains the privacy policies for the Find natural capital data service. If you have any queries about the content of this privacy notice, please email  <a class="govuk-link" href="mailto: data.protection@defra.gov.uk">data.protection@defra.gov.uk.</a></p>
       <h1 class="govuk-heading-m">Who collects your personal data</h1>
         <p class="govuk-body-m">Department for Environment, Food and Rural Affairs (Defra) is the controller for the personal data we collect:</p>
 
@@ -36,15 +36,15 @@
          <p class="govuk-body-m ncea-static-page-line-item">London</p>
          <p class="govuk-body-m ncea-static-page-line-item">SW1P 4DF</p>
 
-        <p class="govuk-body-m govuk-!-margin-top-4 govuk-!-margin-bottom-0">If you need further information about how Defra uses your personal data and your associated rights you can contact the Defra data protection manager at  <a class="govuk-link help-link" href="mailto: data.protection@defra.gov.uk">data.protection@defra.gov.uk</a> or at the above address.</p>
+        <p class="govuk-body-m govuk-!-margin-top-4 govuk-!-margin-bottom-0">If you need further information about how Defra uses your personal data and your associated rights you can contact the Defra data protection manager at  <a class="govuk-link" href="mailto: data.protection@defra.gov.uk">data.protection@defra.gov.uk</a> or at the above address.</p>
         <p class="govuk-body-m"> The data protection officer for Defra is responsible for checking that Defra complies with legislation. You can contact them at the above address.</p>
 
       <h1 class="govuk-heading-m">What personal data we collect and how it is used</h1>
        <p class="govuk-body-m">The personal data we collect from you includes: </p>
       <ul>
         <li class="govuk-body-m ncea-static-page-line-item">questions, queries or feedback you leave, including your email address if you contact NCEA.</li>
-        <li class="govuk-body-m ncea-static-page-line-item">your Internet Protocol (IP) address, and details of which version of  <a class="govuk-link help-link" href="https://www.gov.uk/help/browsers" rel="noreferrer noopener" target="_blank" class="govuk-link help-link">web browser</a> you used </li>
-        <li class="govuk-body-m ncea-static-page-line-item">information on how you use the site, <a class="govuk-link help-link" href="https://www.gov.uk/help/cookies" rel="noreferrer noopener" target="_blank" class="govuk-link help-link">using cookies</a> and page tagging techniques </li>
+        <li class="govuk-body-m ncea-static-page-line-item">your Internet Protocol (IP) address, and details of which version of  <a class="govuk-link" href="https://www.gov.uk/help/browsers" rel="noreferrer noopener" target="_blank" class="govuk-link">web browser</a> you used </li>
+        <li class="govuk-body-m ncea-static-page-line-item">information on how you use the site, <a class="govuk-link" href="https://www.gov.uk/help/cookies" rel="noreferrer noopener" target="_blank" class="govuk-link">using cookies</a> and page tagging techniques </li>
       </ul>
 
       <h1 class="govuk-heading-m">Lawful basis for processing your personal data</h1>
@@ -57,7 +57,7 @@
        </ul>
 
        <h1 class="govuk-heading-m">Consent to process your personal data</h1>
-       <p class="govuk-body-m">The processing of your personal data in the service itself is not based on consent. You cannot withdraw it.<br/> However, your consent is required to use  <a class="govuk-link help-link" href="https://support.google.com/analytics/topic/2919631" rel="noreferrer noopener" target="_blank" class="govuk-link help-link">Google Analytics</a> cookies. You can give or revoke your consent on our Cookies notice page.</p>
+       <p class="govuk-body-m">The processing of your personal data in the service itself is not based on consent. You cannot withdraw it.<br/> However, your consent is required to use  <a class="govuk-link" href="https://support.google.com/analytics/topic/2919631" rel="noreferrer noopener" target="_blank" class="govuk-link">Google Analytics</a> cookies. You can give or revoke your consent on our Cookies notice page.</p>
 
         <p class="govuk-body-m">Google Analytics processes information about: </p>
          <ul>
@@ -67,12 +67,12 @@
        <li class="govuk-body-m ncea-static-page-line-item"> what you click on while you’re visiting the site </li>
        </ul>
 
-      <p class="govuk-body-m "> We make sure you cannot be directly identified by Google Analytics data. We do this by using<a class="govuk-link help-link" href="https://support.google.com/analytics/answer/2763052" rel="noreferrer noopener" target="_blank" class="govuk-link help-link"> Google Analytics’ IP address anonymisation</a> feature and by removing any other personal data from the titles or URLs of the pages you visit. </p>
+      <p class="govuk-body-m "> We make sure you cannot be directly identified by Google Analytics data. We do this by using<a class="govuk-link" href="https://support.google.com/analytics/answer/2763052" rel="noreferrer noopener" target="_blank" class="govuk-link"> Google Analytics’ IP address anonymisation</a> feature and by removing any other personal data from the titles or URLs of the pages you visit. </p>
 
       <p class="govuk-body-m">We will not combine analytics information with other data sets in a way that would directly identify who you are.</p>
 
       <p class="govuk-body-m">
-        <a class="govuk-link help-link" href="https://www.gov.uk/help/cookie-details" rel="noreferrer noopener" target="_blank" class="govuk-link help-link">Find out more about how we use Google Analytics and other cookies on GOV.UK. </a>
+        <a class="govuk-link" href="https://www.gov.uk/help/cookie-details" rel="noreferrer noopener" target="_blank" class="govuk-link">Find out more about how we use Google Analytics and other cookies on GOV.UK. </a>
       </p>
 
       <h1 class="govuk-heading-m">Who we share your personal data with</h1>
@@ -123,7 +123,7 @@
         <li class="govuk-body-m ncea-static-page-line-item">Rights in relation to automated decision making and profiling  </li>
        </ul>
 
-          <p class="govuk-body-m govuk-!-margin-bottom-5">More information about your <a href="https://ico.org.uk/for-organisations/uk-gdpr-guidance-and-resources/individual-rights/" rel="noreferrer noopener" target="_blank" class="govuk-link help-link">individual rights</a> under the UK General Data Protection Regulation (UK GDPR) and the Data Protection Act 2018 (DPA 2018), <a href="https://ico.org.uk/for-organisations/uk-gdpr-guidance-and-resources/individual-rights/" rel="noreferrer noopener" target="_blank" class="govuk-link help-link">can be found here.</a></p>
+          <p class="govuk-body-m govuk-!-margin-bottom-5">More information about your <a href="https://ico.org.uk/for-organisations/uk-gdpr-guidance-and-resources/individual-rights/" rel="noreferrer noopener" target="_blank" class="govuk-link">individual rights</a> under the UK General Data Protection Regulation (UK GDPR) and the Data Protection Act 2018 (DPA 2018), <a href="https://ico.org.uk/for-organisations/uk-gdpr-guidance-and-resources/individual-rights/" rel="noreferrer noopener" target="_blank" class="govuk-link">can be found here.</a></p>
        <br/>
     </div>
   </div>
