--- a/src/views/screens/home/template.njk
+++ b/src/views/screens/home/template.njk
@@ -72,15 +72,15 @@
           from several sources, including:</p>
         <ul class="govuk-!-margin-bottom-6">
           <li class="govuk-body-m ncea-static-page-line-item">
-            <a href="https://medin.org.uk/" target="_blank" class='help-link'>Marine Environmental Data & Information Network (MEDIN)</a>
+            <a href="https://medin.org.uk/" target="_blank" class='govuk-link'>Marine Environmental Data & Information Network (MEDIN)</a>
           </li>
           <li class="govuk-body-m ncea-static-page-line-item">
-            <a href="https://jncc.gov.uk/" target="_blank" class='help-link'>Joint Nature Conservation Committee (JNCC)</a>
+            <a href="https://jncc.gov.uk/" target="_blank" class='govuk-link'>Joint Nature Conservation Committee (JNCC)</a>
           </li>
         </ul>
         <h1 class="govuk-heading-m govuk-\!-static-margin-0 educational-copy-container__heading-m">NCEA programme</h1>
         <p class="govuk-body govuk-!-margin-bottom-6">The Department for Environment, Food and Rural Affairs’(Defra’s)
-          <a class='help-link' href="https://www.gov.uk/government/publications/natural-capital-and-ecosystem-assessment-programme" target="_blank">
+          <a class='govuk-link' href="https://www.gov.uk/government/publications/natural-capital-and-ecosystem-assessment-programme" target="_blank">
           Natural Capital and Ecosystem Assessment (NCEA)</a>
           programme is delivering a nationwide survey of England’s land, coast, and sea: mapping the location, extent and
           condition of our ecosystems and the benefits they provide.</p>
