- I have updated the new atom feed urls with old once. - removed the time in the publish date of the feed article.

--- a/src/assets/sass/templates/_feeds.scss
+++ b/src/assets/sass/templates/_feeds.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
     gap: 0.5rem;
     margin-bottom: 0.5rem;
-    color: govuk-colour('mid-grey');
+    color: govuk-colour('black');
   }
 
   @media only screen and (min-width: 769px) {
