feat(frontend): remove unused id

--- a/src/views/partials/results/filters.njk
+++ b/src/views/partials/results/filters.njk
@@ -142,7 +142,7 @@
             name: dspFilterNames.keywords
           }) }}
 
-          <div class="filter-options__keyboard-filter-content-{{filterInstance}}" id="keyword-filter-list">
+          <div class="filter-options__keyboard-filter-content-{{filterInstance}}">
               <ul class="filter-options__keyboard-filter-list" id="keyboard-filter-list">
               </ul>
           </div>
