feat(frontend): fixes minor issues

--- a/src/views/partials/results/map_results.njk
+++ b/src/views/partials/results/map_results.njk
@@ -125,7 +125,7 @@
         </div>
         <div class='defra-map-info__content' id="info-content"></div>
         <div>
-          {{ govukButton({ text: 'Go to resource', classes: 'govuk-!-margin-bottom-0 govuk-!-margin-right-1', attributes: {id: 'go-to-resource'} }) }}
+          {# {{ govukButton({ text: 'Go to resource', classes: 'govuk-!-margin-bottom-0 govuk-!-margin-right-1', attributes: {id: 'go-to-resource'} }) }} #}
           {{ govukButton({ text: 'More info', classes: 'govuk-button--secondary govuk-!-margin-bottom-0', attributes: {id: 'more-info'} }) }}
         </div>
       </div>
