--- a/src/views/layout/default.njk
+++ b/src/views/layout/default.njk
@@ -175,20 +175,20 @@
     meta: {
       items: [
         {
-          href: routes.privacyPolicy,
-          text: "Privacy"
-        },
-        {
-          href: routes.cookiePolicy,
-          text: "Cookies"
-        },
-        {
           href: routes.accessibilityStatement,
           text: "Accessibility statement"
         },
         {
+          href: routes.cookiePolicy,
+          text: "Cookie Policy"
+        },
+        {
           href: routes.termsAndConditions,
           text: "Terms and conditions"
+        },
+        {
+          href: routes.privacyPolicy,
+          text: "Privacy"
         }
       ],
       html: appVersionHtml
