feat(frontend): added the support link

--- a/src/views/layout/default.njk
+++ b/src/views/layout/default.njk
@@ -189,6 +189,10 @@
         {
           href: routes.privacyPolicy,
           text: "Privacy"
+        },
+        {
+          href: '/support',
+          text: "Support"
         }
       ],
       html: appVersionHtml
