--- a/src/assets/sass/templates/_about.scss
+++ b/src/assets/sass/templates/_about.scss
@@ -18,6 +18,7 @@
       display: flex;
       flex-direction: column;
       gap: 20px;
+      margin-bottom: 30px;
       img:nth-child(2) {
         display: none;
       }
@@ -134,9 +135,6 @@
         button {
           width: 200px
         }
-      &-text {
-        text-align: center;
-      }
       &-list {
         padding: 0;
       }
@@ -177,6 +175,7 @@
       }
     }
     &__intro {
+      margin-bottom: 30px;
       gap: 2rem;
       flex-direction: row;
       &-img {
