feat(frontend): updated the code and images name

--- a/src/views/screens/about/template.njk
+++ b/src/views/screens/about/template.njk
@@ -23,6 +23,9 @@
             <p class="govuk-body govuk-!-margin-bottom-6">
               <a class='govuk-link' href="https://www.gov.uk/government/publications/natural-capital-and-ecosystem-assessment-programme/natural-capital-and-ecosystem-assessment-programme" target="_blank">NCEA</a> is transforming the way we make decisions and develop policy, helping to ensure we invest in environmental reforms that achieve maximum benefit.
             </p>
+            <p class="govuk-body govuk-!-margin-bottom-6">
+            Its outputs, including data, tools and processes are supporting the Government’s missions and commitment to improving economic growth, sustainable land management, ensuring our food security, progression towards net zero and public health.
+            </p>
         </div>
         <div class="landingPage__intro-imageLayout">
         <img class="landingPage__intro-img" src={{ introText.imageUrl1 }} title="Blea Tarn Lake District">
