--- a/src/views/screens/home/template.njk
+++ b/src/views/screens/home/template.njk
@@ -8,7 +8,7 @@
         <h1 class="govuk-heading-xl banner-container__heading-xl">Find natural capital data</h1>
         <span class="govuk-caption-l banner-container__caption-l">Use this service to search for data and information about the
           environment and ecosystems in the England.</span>
-        <span class="govuk-caption-l banner-container__caption-l">This service supports the use of natural capital approaches in evidence and making decisions.</span>
+        <span class="govuk-caption-l banner-container__caption-l">This service supports the use of natural capital approaches in evidence gathering and decision making.</span>
       </div>
     </header>
     {{ quickSearch({
