--- a/src/assets/sass/templates/_about.scss
+++ b/src/assets/sass/templates/_about.scss
@@ -18,7 +18,6 @@
       display: flex;
       flex-direction: column;
       gap: 20px;
-      margin-bottom: 30px;
       img:nth-child(2) {
         display: none;
       }
@@ -93,12 +92,12 @@
         }
         a:nth-child(1) {
           img {
-            padding-left: 10px;
+            padding: 4px;
           }
         }
         a:nth-child(2), a:nth-child(3), a:nth-child(4){
           img {
-            padding: 6px;
+            padding: 4px;
           }
         }
       }
@@ -148,6 +147,9 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      div:nth-of-type(1) {
+        margin-left: 44px;
+      }
       div:nth-of-type(3) {
         margin-left: 72px;
       }
@@ -211,7 +213,7 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        div:nth-of-type(3) {
+        div:nth-of-type(1), div:nth-of-type(3) {
           margin-left: 0px;
         }
       }
