feat(frontend): update the footer links url

--- a/src/views/layout/default.njk
+++ b/src/views/layout/default.njk
@@ -191,7 +191,7 @@
           text: "Privacy"
         },
         {
-          href: '/support',
+          href: routes.support,
           text: "Support"
         }
       ],
