--- a/src/views/screens/feeds/template.njk
+++ b/src/views/screens/feeds/template.njk
@@ -1,6 +1,6 @@
 {% extends "layout/default.njk" %}
 {% block content %}
-  <h1 class="govuk-heading-l">Latest blogs</h1>
+  <h1 class="govuk-heading-l">Latest news</h1>
   {% if error %}
     {% set title = error.errorTitle %}
     {% set message = error.errorMessage %}
