fix(typo): Typo in tab name of License in more info page.
I have updated the tab name "License" to "Licence"

Also updated the type in page title.

Issued Id: NCEA-246.

--- a/src/views/screens/details/template.njk
+++ b/src/views/screens/details/template.njk
@@ -123,7 +123,7 @@
         }
       },
       {
-        label: 'License',
+        label: 'Licence',
         id: 'license',
         panel: {
           html: licenseHtml
